[FEATURE] Check room fullness