@@ -1,5 +1,6 @@
 import model.*;
 import view.pages.ClubPage;
+import view.pages.HomePage;
 import view.pages.InterfaceApp;
 
 import java.util.ArrayList;
@@ -14,21 +15,41 @@ class ClubMain {
 
         ClubManager clubManager = new ClubManager(new ArrayList<>(Arrays.asList(c201, c205, c212)));
 
+        Member m1 = new Member("Jean", 10);
         Member m2 = new Member("Paul", 100);
+        Member m3 = new Member("Jacques", 30);
 
-        Concert c1 = new Concert("Metallica", c201, 100);
-        Concert c2 = new Concert("AC/DC", c205, 1);
-        Concert c3 = new Concert("Dreadknogths", c212, 85);
 
-        Club clubMusic = new Club("azer", clubManager, new ArrayList<>(List.of(m2)));
+        Club clubMusic = new Club("azer", clubManager, new ArrayList<>(Arrays.asList(m1, m2, m3)));
 
-        clubMusic.addConcert(c1);
-        clubMusic.addConcert(c3);
-        clubMusic.addConcert(c2);
+        Concert c1, c2, c3;
+        try {
+            clubManager.getRoomManager().attemptRoomReservation(c201, clubMusic);
+            c1 = new Concert("Metallica", c201, 100);
+            clubMusic.addConcert(c1);
+            clubManager.getRoomManager().attemptRoomReservation(c205, clubMusic);
+            c2 = new Concert("AC/DC", c205, 1);
+            clubMusic.addConcert(c2);
+            clubManager.getRoomManager().attemptRoomReservation(c212, clubMusic);
+            c3 = new Concert("Dreadknogths", c212, 85);
+            clubMusic.addConcert(c3);
+        } catch (Exception ex) {
+            System.out.println(ex.getMessage());
+            return;
+        }
 
-        clubMusic.createTicket(c1, m2, "c201");
-        clubMusic.createTicket(c3, m2, "c212");
+        try {
+            clubManager.attemptReservation(m1, c1);
+            clubManager.attemptReservation(m2, c1);
+            clubManager.attemptReservation(m2, c3);
+            clubManager.attemptReservation(m1, c2);
+            clubManager.attemptReservation(m2, c2);
+        } catch (Exception ex) {
+            System.out.println(ex.getMessage());
+        }
 
+        System.out.println("\n" + m1.ticketsToString());
+        System.out.println(m2.ticketsToString());
 
         InterfaceApp window = new ClubPage(clubManager, clubMusic);
         window.setVisible(true);
